# b2-operator

./: Cargo.toml  README.md
docs/design/: overview.md
src/: crds.rs  main.rs
src/controllers/: account.rs
src/helpers/: b2.rs  mod.rs  secret.rs
