[package]
name = "b2-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.79.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
b2-client = { version = "0.1.3", features = ["with_hyper"] }
serde = "1.0.152"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
schemars = "0.8.11"
clap = { version = "4.1.6", features = ["derive"] }
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }
futures = { version = "0.3.26", features = ["executor"] }
env_logger = "0.10.0"
log = "0.4.17"
